# SlicerOrbitSurgerySim

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
MirrorOrbitRecon/: CMakeLists.txt  MirrorOrbitRecon.py
MirrorOrbitRecon/Resources/UI/: MirrorOrbitRecon.ui
PlateRegistration/: CMakeLists.txt  PlateRegistration.py
PlateRegistration/Resources/UI/: PlateRegistration.ui  PlateRegistration_old.ui
Tutorials/: 00_Quick_Tutorial.md  01_Plate_Registration.md  02_Edit_existing_plate_registration  Generate_Plate_Fit_Metrics
mirrorOrbitRecon/: CMakeLists.txt  mirrorOrbitRecon.py
mirrorOrbitRecon/Resources/UI/: mirrorOrbitRecon.ui
plateRegistration/: CMakeLists.txt  TEST.py  plateRegistration.py
plateRegistration/Resources/UI/: plateRegistration.ui
